<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TrafficLightsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/trafficLightsToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/titleToolbar"/>

    <Button
        android:id="@+id/greenLightBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textGreen"
        android:textSize="22sp"
        android:transitionName="greenButton"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/yellowLightBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textYellow"
        android:textSize="22sp"
        android:transitionName="yellowButton"
        android:layout_below="@id/greenLightBTN"/>

    <Button
        android:id="@+id/redLightBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textRed"
        android:textSize="22sp"
        android:transitionName="redButton"
        android:layout_below="@id/yellowLightBTN"/>

</RelativeLayout>