<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GreenFragment"
    android:background="@color/green"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/greenToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/titleToolbar"/>

    <TextView
        android:id="@+id/greenTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textColor"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="22sp"
        android:transitionName="greenButton"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/greenActionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textGreenAction"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="24sp"/>



</LinearLayout>