<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/yellow"
    android:orientation="vertical"
    tools:context=".YellowFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/yellowToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/titleToolbar"/>

    <TextView
        android:id="@+id/yellowTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/textColor"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:transitionName="yellowButton" />

    <TextView
        android:id="@+id/yellowActionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textYellowActionTV"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>